stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_multi_arm_patterns.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_multi_arm_patterns.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
pong
42
other
stderr:
<empty>
