stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_multiple_messages.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_multiple_messages.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
first
second
third
stderr:
<empty>
