stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_scan_budget.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_scan_budget.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
matched
skip01
stderr:
<empty>
