stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_selective_scan.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_selective_scan.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
matched
skip
stderr:
<empty>
