stage0/tests/snapshots/program__tests_fixtures_programs_actors_receive_tuple_pattern_literal.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/programs/actors/receive_tuple_pattern_literal.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2
stderr:
<empty>
