stage0/tests/snapshots/program__tests_fixtures_programs_actors_send_bool_payload.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/send_bool_payload.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
