stage0/tests/snapshots/program__tests_fixtures_programs_actors_spawn_send_tuple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/spawn_send_tuple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
(1, true)
stderr:
<empty>
