stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_backend_local_abi_boundaries.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_backend_local_abi_boundaries.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
raw unknown param:unsupported;unresolved path:conservative unknown;unresolved call:conservative unknown;wildcard match scrutinee:conservative unknown;incompatible match scrutinee:conservative unknown;incompatible match result:unsupported unknown;receive expression:unsupported local abi;local function scalar literal:unsupported local abi;entrypoint scalar literal:static output value;unknown external abi:boxed value bridge;codegen unknown guard:diagnostic only;unknown aggregate item:refine boxed value;let-bound aggregate item:refine through let;concrete aggregate item:preserve concrete abi;apply unknown operand:refine boxed value;if predicate:refine bool;call signature fact:refine from signature
stderr:
<empty>
